# streamlit-apps

./: README.md
.devcontainer/: devcontainer.json
Air_Battle/: app.py
GPT_and_OCR/: main.py  requirements.txt
GPT_and_OCR/pages/: 2_OCR.py
OCR/: Dockerfile  app.py  main.py  requirements.txt
Selenium-main/: .dockerignore  .pylintrc  Virtualenv.md
Selenium-main/scratchpad/: .dockerignore  Dockerfile
Streamlit-Selenium-main/: Dockerfile  Makefile  README.md
Streamlit-Selenium-main/scratchpad/: README.md
ai_science_finder/: main.py  requirements.txt
audio_text_tool/: README.md  main.py  requirements.txt
multi_search/: Readme.md  app.py  requirements.txt
note_checker/: 1.xlsx  README.md  main.py  my_data.db  notepad.py  pages  products.xlsx  requirements.txt  setup.cfg  setup.py
note_checker/pages/: convert.py  planing.py  requirements.txt
note_ocr_checker/: .gitignore  1.xlsx  1_notepad.py  Notepad.py  README.md  dockerfile  my_data.db  notepad.py  requirements.txt
note_ocr_checker/pages/: 3_OCR.py  OCR.py  Schedualer.py  app.py  dockerfile
note_ocr_checker/pages/OCR/: requirements.txt
npa_register/: app.py  packages.txt  requirements.txt
parsing_prais/: main-2.py  main.py  requirements.txt
