[metadata]
name = my_streamlit_app  # Замени 'my_streamlit_app' на имя своего приложения
version = 0.1.0  # Версия приложения
author = Your Name  #  Твое имя
author_email = your_email@example.com  #  Твой email
description = Streamlit application for ...  #  Описание своего приложения
url = https://github.com/...  #  Ссылка на репозиторий GitHub (если есть)

[options]
packages = find:
install_requires = 
    streamlit
    pandas
    openpyxl
    datetime
    sqlalchemy
    soundfile
    requests
    Pillow
    pytesseract
    docx
    numpy
    pdfplumber
    moviepy
    pydub
    noisereduce
    SpeechRecognition
    python-docx
    opencv-python

[options.entry_points]
console_scripts = 
    my_app = main.__main__:main 